--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,28 @@
 [versions]
-agp = "8.8.0"
+agp = "8.8.2"
+hiltNavigationCompose = "1.2.0"
 kotlin = "2.0.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.10.0"
-composeBom = "2024.04.01"
+activityCompose = "1.10.1"
+composeBom = "2025.03.00"
 
-dagger-hilt = "2.48"
-
-retrofit = "2.9.0"
-okhttp = "4.10.0"
+dagger-hilt = "2.49"
+retrofit = "2.11.0"
+okhttp = "4.12.0"
 timber = "5.0.1"
-coroutines = "1.7.3"
-coil = "2.4.0"
+coroutines = "1.8.0"
+coil = "2.6.0"
+ksp = "2.0.21-1.0.27"
 
-composeNavigation = "2.8.6"
+composeNavigation = "2.8.9"
 serialization = "1.6.3"
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -59,3 +61,5 @@ kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "ko
 
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "dagger-hilt"}
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+
